# CopperCRM

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.webapp  README.md  cloudbuild.webapp.yaml
api/: .dockerignore  Dockerfile  app.py  main.py  openai.py  openai_tools.json  pyproject.toml
api/auth/: __init__.py  authenticate.py  google.py
api/config/: __init__.py  base.py  cloud.py  local.py
api/migrations/models/: 0_20251215161216_init.py  10_20251231190000_add_campaigns.py  11_20251231194500_add_llm_profiles_and_prompts.py  12_20260101120000_add_llm_category_and_email_snapshots.py  13_20260101123000_add_campaign_overlay_profile.py  14_20260101130000_add_campaign_runtime.py  15_20260101140000_add_inbox_imap_and_tracking.py  16_20260101150000_add_campaign_email_profile_snapshots.py  1_20251216151847_add_user_field.py  2_20251216190000_add_first_email_table.py  3_20251217023000_rename_compaies.py  4_20251217024000_fix_latest_funding_column.py  5_20251217030000_create_first_email_approvals.py  6_20251217031500_add_human_reviewed_default_false.py  7_20251217034000_relax_approval_scores_nullable.py  8_20251217140245_add_gender_to_leads.py  9_20251231151744_update.py
api/models/: Lead.py  __init__.py  campaign_runtime.py  campaigns.py  firstEmail.py  leads.py  stages.py  user.py
api/routers/: approval_stats.py  auth.py  campaign_runtime.py  campaigns.py  first_emails.py  imports.py  lead_display.py  outbound_inboxes.py  tracking.py  users.py
api/services/: campaign_runtime.py  email_generation.py  email_sender.py  gender_infer.py  imap_client.py  tracking.py
(+82 files in other folders)
